# AAMAD

./: .gitignore  CHANGELOG.md  CHECKLIST.md  LICENSE  README.md  aamad-ide-guide.md  pyproject.toml
.cursor/agents/: backend-eng.md  dev-crew.md  frontend-eng.md  integration-end.md  integration-eng.md  personas.md  product-mgr.md  project-mgr.md  qa-eng.md  system-arch.md
.cursor/prompts/: prompt  prompt-phase-1  prompt-phase-2a  prompt-phase-2b-1  prompt-phase-2b-2  prompt-phase-2b-3  prompt-phase-2c
.cursor/rules/: aamad-core.mdc  adapter-claude-agent-sdk.mdc  adapter-crewai.mdc  adapter-cursor-sdk.mdc  adapter-registry.mdc  crewai-patterns.mdc
.cursor/templates/: T1.1 Deep Research Generation Template.md  T1.2 PRD Generation Template.md  T1.3b MVP System Architecture Generation Template.md  prd-template.md  sad-template.md
docs/: claude-code-development-plan.md
project-context/1.define/: mrd.md  prd.md
scripts/: update_bundle.py
src/aamad/: __init__.py  claude_code.py  cli.py  installer.py  vscode_copilot.py
tests/: test_claude_code.py  test_vscode_copilot.py
